@@ -5,3 +5,4 @@ Makefile.PL
 MANIFEST
 README
 test.pl
+testhelp
